--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MYSQL_PASSWORD=""
+MYSQL_PASSWORD="Foreveryoung@2021"
 MYSQL_USER = "root"
 MYSQL_HOST= "127.0.0.1"
 MYSQL_DB= "mynewdb"
+SECRET_KEY = "sweprojectgritmarket"
